--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ tensorboard-plugin-wit==1.8.1
 tensorflow==2.9.1
 tensorflow-estimator==2.9.0
 tensorflow-io-gcs-filesystem==0.26.0
+gunicorn==20.1.0
